[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmvcs"
version = "1.0.0"
authors = [
  { name="Gonzalo Mahserdjian", email="gsmx64@outlook.com" },
]
description = "Python MVC Shell Framework Package is a tiny framework for shell projects in Python."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GNU/GPL version 3"}
keywords = ["pmvcs", "python shell", "python mvc", "python shell framework", "python mvc", "python mvc shell framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.entry-points."pmvcs"]
pmvcs = "pmvcs:main"

[project.scripts]
pmvcs = "pmvcs.cli:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"pmvcs" = ["core", "setup", "tests"]}

[project.urls]
"Homepage" = "https://github.com/gsmx64/pmvcs"
"Bug Tracker" = "https://github.com/gsmx64/pmvcs/issues"