[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pmvcs"
version = "1.0.1"
readme = "README.md"
authors = [
  { name="Gonzalo Mahserdjian", email="gsmx64@outlook.com" },
]
description = "Python MVC Shell Framework Package is a tiny framework for shell projects in Python."
requires-python = ">=3.7"
license = {text = "GNU/GPL version 3"}
keywords = ["pmvcs", "python shell", "python mvc", "python shell framework", "python mvc", "python mvc shell framework"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools]
include-package-data = true

[project.entry-points."pmvcs"]
pmvcs = "pmvcs:main"

[project.entry-points."console_scripts"]
pmvcs-cli = "pmvcs.cli:main"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pmvcs*", "example*", "module_unique*", "modules_base*"]
exclude = ["app*", "tests*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = true  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
pmvcs = ["pmvcs/core/setup/languages/*.ini", "pmvcs/setup/defaults/languages/*.ini", "pmvcs/setup/example/languages/*.ini"]

[project.urls]
"Homepage" = "https://github.com/gsmx64/pmvcs"
"Bug Tracker" = "https://github.com/gsmx64/pmvcs/issues"